<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:theme="@style/AppTheme.NoActionBar"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:padding="24dp"
        android:gravity="center"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="48sp"
            android:textStyle="italic|bold"/>

    </LinearLayout>

    <ScrollView
        android:padding="16dp"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/invalid_email_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_invalid_email"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/invalid_password_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_invalid_password"/>

            <TextView
                android:id="@+id/security_question"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/click_to_choose_your_security_question"
                android:textSize="@dimen/text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/security_question_notselected_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_security_question_notselected"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/security_answer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_security_answer"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:visibility="gone"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/invalid_security_answer_warning"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8sp"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                android:text="@string/error_invalid_security_answer"/>


            <Button
                android:layout_marginTop="16dp"
                android:id="@+id/create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text_size"
                android:backgroundTint="@android:color/white"
                android:text="@string/create_account"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>